--- a/ex022/fundo006.html
+++ b/ex022/fundo006.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Posicionamento</title>
+    <title>Fundo Fixo de tela</title>
     <style>
         body {
             height: 100vh;
+            /*
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+
+            background: black url('imagens/wallpaper002.jpg') center center  no-repeat fixed;
+            background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 600px; 
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,6 +33,9 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sequi earum, veritatis voluptate illum fugiat dignissimos sit praesentium itaque at reprehenderit explicabo ipsam esse natus culpa voluptas molestias quibusdam sed? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi, molestias quo nihil praesentium fugit architecto amet non eaque reiciendis, id voluptatibus ratione commodi esse illo in suscipit voluptate ipsa aut! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam aliquam nulla vel consequatur quisquam numquam aut cupiditate exercitationem maxime quibusdam assumenda, pariatur accusamus. Placeat corporis provident officia quas, blanditiis fugiat?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sequi earum, veritatis voluptate illum fugiat dignissimos sit praesentium itaque at reprehenderit explicabo ipsam esse natus culpa voluptas molestias quibusdam sed? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi, molestias quo nihil praesentium fugit architecto amet non eaque reiciendis, id voluptatibus ratione commodi esse illo in suscipit voluptate ipsa aut! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam aliquam nulla vel consequatur quisquam numquam aut cupiditate exercitationem maxime quibusdam assumenda, pariatur accusamus. Placeat corporis provident officia quas, blanditiis fugiat?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sequi earum, veritatis voluptate illum fugiat dignissimos sit praesentium itaque at reprehenderit explicabo ipsam esse natus culpa voluptas molestias quibusdam sed? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi, molestias quo nihil praesentium fugit architecto amet non eaque reiciendis, id voluptatibus ratione commodi esse illo in suscipit voluptate ipsa aut! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam aliquam nulla vel consequatur quisquam numquam aut cupiditate exercitationem maxime quibusdam assumenda, pariatur accusamus. Placeat corporis provident officia quas, blanditiis fugiat?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sequi earum, veritatis voluptate illum fugiat dignissimos sit praesentium itaque at reprehenderit explicabo ipsam esse natus culpa voluptas molestias quibusdam sed? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi, molestias quo nihil praesentium fugit architecto amet non eaque reiciendis, id voluptatibus ratione commodi esse illo in suscipit voluptate ipsa aut! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam aliquam nulla vel consequatur quisquam numquam aut cupiditate exercitationem maxime quibusdam assumenda, pariatur accusamus. Placeat corporis provident officia quas, blanditiis fugiat?</p>
     </main>
 </body>
