--- a/ex024/iframe003.html
+++ b/ex024/iframe003.html
@@ -29,7 +29,7 @@
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic fugit iusto repudiandae sit ducimus ut cumque expedita. Sapiente, est repellat possimus voluptatibus beatae dolorum ut quos ratione eius minima odio! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, eligendi dolores porro quibusdam quaerat explicabo fugit itaque eius deleniti maxime consequuntur? A qui illum deleniti expedita adipisci iure aperiam autem.</p>
 
-    <iframe id="tela" name="frame" src="">Infelizmente seu navegador não é compativel com isso!</iframe>
+    <iframe id="tela" name="frame" srcdoc="<h1>escolha uma das opcoes acima</h1> <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate sunt deserunt adipisci consequatur aliquid, odio magnam eligendi quidem. Cumque dolorum adipisci natus commodi alias nobis mollitia pariatur harum error quisquam!</p> ">Infelizmente seu navegador não é compativel com isso!</iframe>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni repellendus aliquid aliquam optio accusantium minima modi deleniti aspernatur, assumenda, aut officia numquam, suscipit animi totam nesciunt autem eius cum accusamus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem expedita debitis sint id corporis libero provident fuga minima vel, facere ipsa nam fugiat laborum assumenda voluptate laboriosam ad magni sequi.</p>
 </body>
