--- a/ex026/mq004/index.html
+++ b/ex026/mq004/index.html
@@ -12,7 +12,7 @@
     <main>
         <h1>Testando media queries</h1>
         <img id="phone" src="imagens/icon-phone.png" alt="Acessando via Smartphone">
-        <img id="tablet" src="imagens/back-tablet.jpg" alt="Acessando via Tablet">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="Acessando via Tablet">
         <img id="print" src="imagens/icon-print.png" alt="Versão para impressão">
         <img id="pc" src="imagens/icon-pc.png" alt="Acessando via desktop">
         <img id="tv" src="imagens/icon-tv.png" alt="Versão para TV">
